# ncsh

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  backfill_runner.py  lambda_function.py  organize_tests.sh  requirements-dev.txt  requirements.txt  response.json  runner.py  scrapy.cfg  setup.py  test_direct_access.py
analysis/: Dockerfile  README.md  __init__.py  docker-compose.yml  lambda_function.py  main.py  memory.py  pyproject.toml  query_cli.py  query_engine.py  requirements.in  requirements.txt  smoke-test.sh  stepfunction.json
analysis/query/: __init__.py
analysis/query/core/: __init__.py  engine.py  setup.py
analysis/query/models/: __init__.py  llm.py
analysis/query/sql/: __init__.py  database.py
analysis/query/utils/: __init__.py  sql_helpers.py  team_info.py  validation.py
analysis/ui/: 20250226_205158.json  Home.py
analysis/ui/pages/: 1_Statistics.py
processing/: Dockerfile  lambda_function.py  models.py  pyproject.toml  requirements.in  requirements.txt
scraping/: Dockerfile  backfill_runner.py  bootstrap  bootstrap.sh  lambda_function.py  pyproject.toml  requirements.in  requirements.txt  test_lambda_locally.py  test_simple_scraper.py
scraping/data/: lookup.json
scraping/data/games/year=2010/month=10/day=02/: data.jsonl
scraping/data/games/year=2010/month=10/day=03/: data.jsonl
scraping/data/games/year=2010/month=10/day=10/: data.jsonl
scraping/data/html/: 2010-02-14.html  2010-10-01.html  2010-10-02.html  2010-10-03.html  2010-10-10.html  2011-05-08.html  2024-12-01.html  2024-12-02.html  2024-12-03.html  2024-12-04.html  2024-12-05.html  2024-12-06.html  2024-12-07.html  2024-12-08.html  2024-12-09.html  2024-12-10.html  2024-12-11.html  2024-12-12.html  2024-12-13.html  2024-12-14.html  2024-12-15.html  2024-12-16.html  2024-12-17.html  2024-12-18.html  2024-12-19.html  2024-12-20.html  2024-12-21.html  2024-12-22.html  2024-12-23.html  2024-12-24.html  2024-12-25.html  2024-12-26.html  2024-12-27.html  2024-12-28.html  2024-12-29.html  2024-12-30.html  2024-12-31.html
scraping/data/json/: 2010-02-14.json  2010-02-14_meta.json  2010-10-01_meta.json  2010-10-02.json  2010-10-02_meta.json  2010-10-03.json  2010-10-03_meta.json  2010-10-10.json  2010-10-10_meta.json  2011-05-08_meta.json  2024-03-01.json  2024-03-01_meta.json  2024-12-01.json  2024-12-01_meta.json  2024-12-02.json  2024-12-02_meta.json  2024-12-03.json  2024-12-03_meta.json  2024-12-04.json  2024-12-04_meta.json  2024-12-05.json  2024-12-05_meta.json  2024-12-06.json  2024-12-06_meta.json  2024-12-07.json  2024-12-07_meta.json  2024-12-08.json  2024-12-08_meta.json  2024-12-09.json  2024-12-09_meta.json  2024-12-10.json  2024-12-10_meta.json  2024-12-11.json  2024-12-11_meta.json  2024-12-12.json  2024-12-12_meta.json  2024-12-13.json  2024-12-13_meta.json  2024-12-14.json  2024-12-14_meta.json  (+34 more)
scraping/ncsoccer/: items.py  runner.py  scraper.py  settings.py
scraping/ncsoccer/agents/: score_extraction_agent.py
scraping/ncsoccer/pipeline/: checkpoint.py  config.py  lookup.py
scraping/ncsoccer/spiders/: backfill_spider.py  schedule_spider.py
scraping/tests/integration/: test_spider_integration.py
(+201 files in other folders)
