[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ncsoccer-analysis"
version = "0.1.0"
description = "NC Soccer Hub analysis and visualization tools"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["ui", "query_engine.py", "memory.py", "__init__.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"