[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ncsoccer-processing"
version = "0.1"
description = "NC Soccer Data Processing"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0"
]

[tool.setuptools]
py-modules = ["models", "lambda_function"]

[tool.ruff]
line-length = 100
target-version = "py311"