[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ncsoccer"
version = "0.1"
description = "NC Soccer Schedule Scraper"
requires-python = ">=3.7"
dependencies = [
    "scrapy>=2.0.0",
    "boto3>=1.0.0",
]

[tool.setuptools]
packages = ["ncsoccer"]

[tool.pytest.ini_options]
pythonpath = [
    "."
]