[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ncsoccer"
version = "3.0.2"
description = "NC Soccer Schedule Scraper"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.3.0"
]

[tool.setuptools]
packages = ["ncsoccer"]

[tool.pytest.ini_options]
pythonpath = [
    "."
]

[tool.ruff]
line-length = 100
target-version = "py311"